--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,7 +4,7 @@
         "module": "commonjs",
         "target": "ESNext",
         "esModuleInterop": true,
-        "allowJS": true,
+        "allowJs": true,
         "experimentalDecorators": true
     }
 }
