--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -4,12 +4,10 @@
         "node": true
     },
     "extends": "standard-with-typescript",
-    "overrides": [
-    ],
     "parserOptions": {
-        "ecmaVersion": "latest",
-        "sourceType": "module"
+        "project": "./tsconfig.json"
     },
     "rules": {
+        "@typescript-eslint/strict-boolean-expressions": "off"
     }
 }
