--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,6 +5,7 @@
         "target": "ESNext",
         "esModuleInterop": true,
         "allowJs": true,
-        "experimentalDecorators": true
+        "experimentalDecorators": true,
+        "strictNullChecks": false
     }
 }
