--- a/package.json
+++ b/package.json
@@ -6,11 +6,13 @@
   "scripts": {
     "build": "babel src --extensions \".js,.ts\" --out-dir dist --copy-files --no-copy-ignored",
     "typecheck": "tsc --project tsconfig.json --pretty --noEmit",
-    "linter": "eslint src --max-warnings=0"
+    "linter": "eslint src --max-warnings=0",
+    "test": "jest"
   },
   "devDependencies": {
     "@commitlint/cli": "^17.1.2",
     "@commitlint/config-conventional": "^17.1.0",
+    "@types/jest": "^29.1.2",
     "@types/node": "^18.8.4",
     "@typescript-eslint/eslint-plugin": "^5.0.0",
     "eslint": "^8.0.1",
@@ -19,7 +21,9 @@
     "eslint-plugin-n": "^15.0.0",
     "eslint-plugin-promise": "^6.0.0",
     "husky": "^8.0.1",
+    "jest": "^29.1.2",
     "lint-staged": "^13.0.3",
+    "ts-jest": "^29.0.3",
     "typescript": "*"
   }
 }
